fix: style on mobile

--- a/todolist/src/components/AddList/AddList.css
+++ b/todolist/src/components/AddList/AddList.css
@@ -25,7 +25,7 @@ svg {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 60%;
+  height: 80%;
   overflow: auto;
 }
 
@@ -47,14 +47,14 @@ fragment li {
   flex-grow: 2;
   text-align: start;
 }
-.star {
+.star svg {
   color: yellow;
   font-size: 2rem;
 }
 
 .AddList {
   padding: 20px;
-  height: 100%;
+  height: 85%;
 }
 
 .AddList ul {
@@ -72,4 +72,10 @@ fragment li {
   background-color: rgba(255, 255, 255, 0);
   border: none;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 820px) {
+  .list {
+    height: 70%;
+  }
 }
