--- a/todolist/src/components/ToDoList/ToDoList.css
+++ b/todolist/src/components/ToDoList/ToDoList.css
@@ -3,6 +3,14 @@
   border-radius: 20px;
   color: black;
   width: 40%;
-  height: 70%;
+  height: 85%;
   text-align: center;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+@media only screen and (max-width: 820px) {
+  .ToDoList {
+    width: 85%;
+    height: 70%;
+  }
 }
